--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -24,12 +24,6 @@
     #produtos-cadastrados th { background-color: #f9f9f9; }
     #produtos-cadastrados button.excluir { background-color: #dc3545; padding: 5px 10px; font-size: 14px; }
     #produtos-cadastrados button.excluir:hover { background-color: #c82333; }
-    #auth-section { max-width: 400px; margin: 50px auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    #main-content { display: none; }
-    #auth-error { color: red; text-align: center; margin-top: 10px; }
-    #logout-button { margin: 20px auto; max-width: 500px; text-align: center; }
-    #logout-button button { background-color: #6c757d; }
-    #logout-button button:hover { background-color: #5a6268; }
     .thumbnail { width: 50px; height: 50px; object-fit: cover; margin: 2px; cursor: pointer; border-radius: 4px; }
     .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.8); z-index: 1000; justify-content: center; align-items: center; }
     .modal-content { position: relative; max-width: 90%; max-height: 90%; width: auto; height: auto; }
@@ -45,15 +39,6 @@
   </style>
 </head>
 <body>
-  <div id="auth-section">
-    <h2>Autenticação</h2>
-    <form id="auth-form">
-      <input type="password" id="auth-password" placeholder="Digite a senha" required>
-      <button type="submit">Entrar</button>
-    </form>
-    <div id="auth-error"></div>
-  </div>
-
   <div id="main-content">
     <h1>Adicionar Produto</h1>
     <form id="form-produto" enctype="multipart/form-data">
@@ -114,10 +99,6 @@
       <textarea id="import-json" placeholder="Cole o JSON para importar"></textarea>
       <button onclick="importarJSON()">Importar JSON</button>
     </div>
-
-    <div id="logout-button">
-      <button onclick="logout()">Sair</button>
-    </div>
   </div>
 
   <div class="modal" id="imageModal">
@@ -131,82 +112,33 @@
   </div>
 
   <script>
-    const SENHA_CORRETA = "comprasempre@098457";
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
 
-    // Initialize products from localStorage
+    // Inicializar produtos do localStorage
     try {
       const storedProdutos = localStorage.getItem('produtos');
       produtos = storedProdutos ? JSON.parse(storedProdutos) : [];
       if (!Array.isArray(produtos)) produtos = [];
     } catch (e) {
-      console.error('Error loading products from localStorage:', e);
+      console.error('Erro ao carregar produtos do localStorage:', e);
       produtos = [];
     }
 
-    function verificarAutenticacao() {
-      const authSection = document.getElementById('auth-section');
-      const mainContent = document.getElementById('main-content');
-      if (!authSection || !mainContent) {
-        console.error('DOM elements not found: #auth-section or #main-content');
-        return;
-      }
-      const isAutenticado = sessionStorage.getItem('autenticado') === 'true';
-      if (isAutenticado) {
-        authSection.style.display = 'none';
-        mainContent.style.display = 'block';
-        atualizarJSON();
-        atualizarListaProdutos();
-      } else {
-        authSection.style.display = 'block';
-        mainContent.style.display = 'none';
-      }
-    }
-
     function configurarEventos() {
-      const authForm = document.getElementById('auth-form');
-      if (!authForm) {
-        console.error('DOM element not found: #auth-form');
-        return;
-      }
-      authForm.addEventListener('submit', (e) => {
-        e.preventDefault();
-        e.stopPropagation(); // Prevent extensions like MetaMask from intercepting
-        const passwordInput = document.getElementById('auth-password');
-        const authError = document.getElementById('auth-error');
-        if (!passwordInput || !authError) {
-          console.error('DOM elements not found: #auth-password or #auth-error');
-          return;
-        }
-        const password = passwordInput.value;
-        console.log('Login attempt with password:', password);
-        if (password === SENHA_CORRETA) {
-          sessionStorage.setItem('autenticado', 'true');
-          document.getElementById('auth-section').style.display = 'none';
-          document.getElementById('main-content').style.display = 'block';
-          atualizarJSON();
-          atualizarListaProdutos();
-          authError.textContent = '';
-        } else {
-          authError.textContent = 'Senha incorreta! Tente novamente.';
-          passwordInput.value = '';
-        }
-      });
-
       const formProduto = document.getElementById('form-produto');
       if (!formProduto) {
-        console.error('DOM element not found: #form-produto');
+        console.error('Elemento DOM não encontrado: #form-produto');
         return;
       }
       formProduto.addEventListener('submit', async (e) => {
         e.preventDefault();
-        e.stopPropagation();
+        e.stopPropagation(); // Evitar interferência de extensões como MetaMask
         const mensagem = document.getElementById('mensagem');
         const erro = document.getElementById('erro');
         if (!mensagem || !erro) {
-          console.error('DOM elements not found: #mensagem or #erro');
+          console.error('Elementos DOM não encontrados: #mensagem ou #erro');
           return;
         }
         const nome = e.target.querySelector('input[name="nome"]').value;
@@ -259,7 +191,7 @@
           erro.textContent = '';
           e.target.reset();
         } catch (error) {
-          console.error('Error adding product:', error);
+          console.error('Erro ao adicionar produto:', error);
           erro.textContent = error.message || 'Erro ao processar as imagens. Tente novamente.';
           mensagem.textContent = '';
         }
@@ -267,7 +199,7 @@
 
       const imageModal = document.getElementById('imageModal');
       if (!imageModal) {
-        console.error('DOM element not found: #imageModal');
+        console.error('Elemento DOM não encontrado: #imageModal');
         return;
       }
       imageModal.addEventListener('click', (e) => {
@@ -311,13 +243,13 @@
     function atualizarJSON() {
       const jsonText = document.getElementById('json-text');
       if (!jsonText) {
-        console.error('DOM element not found: #json-text');
+        console.error('Elemento DOM não encontrado: #json-text');
         return;
       }
       try {
         jsonText.value = JSON.stringify(produtos, null, 2);
       } catch (e) {
-        console.error('Error updating JSON:', e);
+        console.error('Erro ao atualizar JSON:', e);
         const erro = document.getElementById('erro');
         if (erro) erro.textContent = 'Erro ao gerar JSON. Tente novamente.';
       }
@@ -326,7 +258,7 @@
     function atualizarListaProdutos() {
       const listaProdutos = document.getElementById('lista-produtos');
       if (!listaProdutos) {
-        console.error('DOM element not found: #lista-produtos');
+        console.error('Elemento DOM não encontrado: #lista-produtos');
         return;
       }
       listaProdutos.innerHTML = '';
@@ -356,7 +288,7 @@
       const carrosselImagens = document.getElementById('modalCarrosselImagens');
       const carrosselDots = document.getElementById('modalCarrosselDots');
       if (!modal || !carrosselImagens || !carrosselDots) {
-        console.error('DOM elements not found for modal');
+        console.error('Elementos DOM não encontrados para o modal');
         return;
       }
       currentImages = produtos[produtoIndex].imagens || [];
@@ -374,7 +306,7 @@
       const carrosselImagens = document.getElementById('modalCarrosselImagens');
       const carrosselDots = document.getElementById('modalCarrosselDots').children;
       if (!carrosselImagens || !carrosselDots) {
-        console.error('DOM elements not found for carousel');
+        console.error('Elementos DOM não encontrados para o carrossel');
         return;
       }
       const totalImagens = currentImages.length;
@@ -387,7 +319,7 @@
       const carrosselImagens = document.getElementById('modalCarrosselImagens');
       const carrosselDots = document.getElementById('modalCarrosselDots').children;
       if (!carrosselImagens || !carrosselDots) {
-        console.error('DOM elements not found for carousel');
+        console.error('Elementos DOM não encontrados para o carrossel');
         return;
       }
       currentImageIndex = index;
@@ -398,7 +330,7 @@
     function closeModal() {
       const modal = document.getElementById('imageModal');
       if (!modal) {
-        console.error('DOM element not found: #imageModal');
+        console.error('Elemento DOM não encontrado: #imageModal');
         return;
       }
       modal.style.display = 'none';
@@ -410,7 +342,7 @@
       const mensagem = document.getElementById('mensagem');
       const erro = document.getElementById('erro');
       if (!mensagem || !erro) {
-        console.error('DOM elements not found: #mensagem or #erro');
+        console.error('Elementos DOM não encontrados: #mensagem ou #erro');
         return;
       }
       try {
@@ -421,7 +353,7 @@
         mensagem.textContent = 'Produto excluído! Clique em "Atualizar produtos.json no GitHub" para sincronizar.';
         erro.textContent = '';
       } catch (e) {
-        console.error('Error deleting product:', e);
+        console.error('Erro ao excluir produto:', e);
         erro.textContent = 'Erro ao excluir produto. Tente novamente.';
       }
     }
@@ -432,11 +364,16 @@
       const mensagem = document.getElementById('mensagem');
       const erro = document.getElementById('erro');
       if (!mensagem || !erro) {
-        console.error('DOM elements not found: #mensagem or #erro');
+        console.error('Elementos DOM não encontrados: #mensagem ou #erro');
         return;
       }
       if (!token) {
         erro.textContent = 'Por favor, insira o GitHub Personal Access Token!';
+        mensagem.textContent = '';
+        return;
+      }
+      if (!jsonText) {
+        erro.textContent = 'JSON dos produtos não encontrado!';
         mensagem.textContent = '';
         return;
       }
@@ -489,7 +426,7 @@
           throw new Error(`Erro ao atualizar produtos.json: ${errorData.message || updateResponse.statusText}`);
         }
       } catch (error) {
-        console.error('Error syncing with GitHub:', error);
+        console.error('Erro ao sincronizar com o GitHub:', error);
         erro.textContent = error.message || 'Erro ao sincronizar com o GitHub. Verifique o token e tente novamente.';
         mensagem.textContent = '';
       }
@@ -500,12 +437,17 @@
       const mensagem = document.getElementById('mensagem');
       const erro = document.getElementById('erro');
       if (!mensagem || !erro) {
-        console.error('DOM elements not found: #mensagem or #erro');
+        console.error('Elementos DOM não encontrados: #mensagem ou #erro');
+        return;
+      }
+      if (!importText) {
+        erro.textContent = 'Por favor, insira o JSON para importar!';
+        mensagem.textContent = '';
         return;
       }
       try {
         const importedProdutos = JSON.parse(importText);
-        if (!Array.isArray(importedProdutos)) throw new Error('JSON inválido! Deve ser uma lista de produtos.');
+        if      if (!Array.isArray(importedProdutos)) throw new Error('JSON inválido! Deve ser uma lista de produtos.');
         produtos = importedProdutos;
         localStorage.setItem('produtos', JSON.stringify(produtos));
         atualizarJSON();
@@ -514,38 +456,24 @@
         erro.textContent = '';
         document.getElementById('import-json').value = '';
       } catch (error) {
-        console.error('Error importing JSON:', error);
+        console.error('Erro ao importar JSON:', error);
         erro.textContent = error.message || 'Erro ao importar JSON. Verifique o formato e tente novamente.';
         mensagem.textContent = '';
       }
     }
 
-    function logout() {
-      const authSection = document.getElementById('auth-section');
-      const mainContent = document.getElementById('main-content');
-      const passwordInput = document.getElementById('auth-password');
-      const authError = document.getElementById('auth-error');
-      if (!authSection || !mainContent || !passwordInput || !authError) {
-        console.error('DOM elements not found for logout');
-        return;
-      }
-      sessionStorage.removeItem('autenticado');
-      authSection.style.display = 'block';
-      mainContent.style.display = 'none';
-      passwordInput.value = '';
-      authError.textContent = '';
-    }
-
-    // Run initialization after DOM is fully loaded
+    // Inicializar após o DOM estar carregado
     document.addEventListener('DOMContentLoaded', () => {
-      console.log('DOM fully loaded, initializing...');
-      const criticalElements = ['auth-form', 'form-produto', 'imageModal'].map((id) => document.getElementById(id));
-      if (criticalElements.some((el) => !el)) {
-        console.error('Critical DOM elements missing:', criticalElements);
+      console.log('DOM carregado, inicializando admin-xyz-123.html');
+      const criticalElements = ['form-produto', 'imageModal', 'lista-produtos', 'json-text', 'import-json'];
+      const missingElements = criticalElements.filter((id) => !document.getElementById(id));
+      if (missingElements.length > 0) {
+        console.error('Elementos DOM críticos não encontrados:', missingElements);
         return;
       }
       configurarEventos();
-      verificarAutenticacao();
+      atualizarJSON();
+      atualizarListaProdutos();
     });
   </script>
 </body>
